--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
  "mongoose": "~3.6.11",
  "express": "^4.7.1",
  "method-override": "^2.1.2",
- "body-parser": "^1.5.1"
+ "body-parser": "^1.5.1",
+ "cors": "~2.15.9",
+ "mongodb": "~2.15.9"
  }
 }
