--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
- "name": "node-api-rest-example",
- "version": "2.0.0",
- "dependencies": {
- "mongoose": "~3.6.11",
- "express": "^4.7.1",
- "method-override": "^2.1.2",
- "body-parser": "^1.5.1",
- "mongodb": "^2.1.6",
- "cors": "^2.1.6"
- }
+  "name": "node-api-rest-example",
+  "version": "2.0.0",
+  "dependencies": {
+    "body-parser": "^1.5.1",
+    "cors": "^2.1.6",
+    "express": "^4.7.1",
+    "method-override": "^2.1.2",
+    "mongodb": "^2.1.6",
+    "mongoose": "4.1.9"
+  }
 }
