--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "express": "^4.7.1",
     "method-override": "^2.1.2",
     "mongodb": "^2.1.6",
-    "mongoose": "4.1.9"
+    "mongoose": "^4.1.9"
   }
 }
